--- a/app/(Kambaz)/styles.css
+++ b/app/(Kambaz)/styles.css
@@ -1,18 +1,65 @@
-body   {
+body {
     margin: 0;
     padding: 0;
   }
   
   body * {
-    font-family: Arial,
-    Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   @media (min-width: 768px) {
     #wd-kambaz .wd-main-content-offset {
-      padding-left: 180px !important;
+      padding-left: 140px !important;
     }
   }
   
+  .list-group.wd {
+    border: none;
+  }
   
+  .list-group.wd > .list-group-item {
+    border: none;
+    padding: 12px 16px;
+    cursor: pointer;
+  }
   
+  .list-group.wd > .list-group-item:hover {
+    background-color: #f5f5f5;
+  }
+  
+  .list-group.wd > .list-group-item.active {
+    color: black;
+    background-color: white;
+    border-left: 3px solid black !important;
+  }
+  
+  .list-group.wd > .list-group-item.text-danger {
+    color: #dc3545;
+  }
+  
+  .btn-secondary {
+    --bs-btn-color: #000 !important;
+    --bs-btn-bg: #c7cdd1 !important;
+    --bs-btn-border-color: #c7cdd1 !important;
+    --bs-btn-hover-color: #fff !important;
+  }
+  
+  .bg-secondary {
+    --bs-secondary-rgb: 199, 205, 209;
+  }
+  
+  .list-group-item {
+    --bs-list-group-border-color: gray;
+  }
+  
+  .wd-lesson {
+    border-left: 3px solid green !important;
+  }
+  
+  .border-gray {
+    border-color: gray !important;
+  }
+
+  .wd-assignment-list-item {
+    border-left: 3px solid green !important;
+  }
